# PyTorch-ARC

./: .gitignore  CITATION  MANIFEST.in  README.md  pyproject.toml
torch_arc/: __init__.py  arc.py  hvp.py  subproblem_solver.py
torch_arc/deprecated/: arc.py  sub_problem.py
